change background color

--- a/src/Component/Sidebar/style.css
+++ b/src/Component/Sidebar/style.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #1c1c1e;
+  background-color: #2C2C2E;
   text-align: center;
   border-right: 2px solid black;
 }
