--- a/src/Component/Header/style.css
+++ b/src/Component/Header/style.css
@@ -1,6 +1,6 @@
 .header {
   margin-left: 80px;
-  background-color: #1c1c1e;
+  background-color: #2C2C2E;
   display: flex;
   align-items: center;
   justify-content: space-between;
