--- a/src/Component/LayerForm/style.css
+++ b/src/Component/LayerForm/style.css
@@ -1,13 +1,16 @@
 .layer-form {
   position: absolute;
   margin-left: 40px;
-  width: 93%;
-  height: 500px;
+  width: 80%;
+  height: 75vh;
   background-color: rgb(51, 51, 51);
-  top: 900px;
+  bottom: 0;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  overflow: scroll;
+  overflow-y: scroll;
+  display: flex;
+  justify-content: center;
+  z-index: 11;
 }
 
 .layer-form.up {
@@ -20,21 +23,21 @@
 
 @keyframes up {
   from {
-    top: 900px;
+    bottom: -1000px;
   }
 
   to {
-    top: 100px;
+    bottom: 0;
   }
 }
 
 @keyframes down {
   from {
-    top: 100px;
+    bottom: 0;
   }
 
   to {
-    top: 900px;
+    bottom: -500px;
   }
 }
 
@@ -52,10 +55,6 @@
   border-radius: 10px;
 }
 
-.layer-form::backdrop {
-  background-color: red;
-}
-
 .layer-form hr {
   position: fixed;
   border: none;
@@ -64,7 +63,6 @@
   border-radius: 20px;
   background-color: rgb(204, 204, 204);
   cursor: pointer;
-  left: 600px;
 }
 
 .layer-form form input::placeholder {
@@ -131,7 +129,7 @@ input[type="file"] {
   line-height: 1.5;
   border-radius: 0.25rem;
   width: 85%;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .layer-form form .btn-simpan {
