--- a/src/Component/Header/style.css
+++ b/src/Component/Header/style.css
@@ -1,6 +1,6 @@
 .header {
   margin-left: 80px;
-  background-color: #2C2C2E;
+  background-color: #2c2c2e;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -26,24 +26,22 @@
   font-size: 16px;
 }
 
-
-
 .header .user-info {
-    margin-right: 40px;
-    display: flex;
-    align-items: center;
+  margin-right: 40px;
+  display: flex;
+  align-items: center;
 }
 
 .header .user-info h4 {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .header .user-info img {
-    width: 45px;
-    height: 45px;
-    border-radius: 10px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
 }
 
 .header .user-info img:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
