--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 /* BG #282C34
   Scnd #61DAFB
 */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -12,7 +13,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Poppins", "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
-  background-color: #EDECEC;
+  background-color: #2c2c2e;
   color: rgb(122, 122, 122);
   margin: 0;
 }
