--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
 */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
-html,
-body {
+html {
   height: 100%;
 }
 
@@ -16,6 +15,8 @@ body {
   background-color: #2c2c2e;
   color: rgb(122, 122, 122);
   margin: 0;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .btn {
