--- a/src/Pages/SuccessPage/style.css
+++ b/src/Pages/SuccessPage/style.css
@@ -1,8 +1,13 @@
 .success-page {
-    text-align: center;
-    margin-top: 20px;
+  text-align: center;
+  color: white;
 }
 
 .success-page img {
-    width: 500px;
+  width: 450px;
+  margin-top: 40px;
+}
+
+.success-page h1 {
+  color: #6c63ff;
 }
