--- a/src/Component/Template/style.css
+++ b/src/Component/Template/style.css
@@ -30,18 +30,18 @@ input:disabled {
   color: black;
 }
 
-header {
+.pdf header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-header img {
+.pdf header img {
   width: 250px;
   height: 100px;
 }
 
-header p {
+.pdf header p {
   font-size: 13px;
   font-weight: 500;
 }
@@ -99,24 +99,24 @@ section .section1 {
   margin-top: 20px;
 }
 
-table {
+.pdf table {
   width: 100%;
   border: 1px solid black !important;
 }
 
-table thead {
+.pdf table thead {
   background-color: black;
   color: white;
   text-align: left;
 }
 
-table p {
+.pdf table p {
   font-size: 13px;
   display: inline-block;
   font-weight: 500;
 }
 
-table input {
+.pdf table input {
   border-top: none;
   border-left: none;
   border-right: none;
@@ -124,7 +124,7 @@ table input {
   width: 80%;
 }
 
-table textarea {
+.pdf table textarea {
   border: 1px dotted;
   color: black;
 }
@@ -200,7 +200,7 @@ table textarea {
 }
 
 .filled-by {
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   margin-top: 84px;
 }
 
