--- a/src/Component/Sidebar/style.css
+++ b/src/Component/Sidebar/style.css
@@ -7,12 +7,15 @@
   background-color: #2c2c2e;
   text-align: center;
   border-right: 2px solid black;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar header {
   margin-top: 20px;
   text-align: center;
   color: white;
+  flex: 1;
 }
 
 .sidebar header hr {
@@ -29,6 +32,7 @@
   padding: 5px;
   box-sizing: border-box;
   border-radius: 18px;
+  flex: 1;
 }
 
 .sidebar nav li.active {
